--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
